--- a/test/integration/testdata/compose/reschedule.yml
+++ b/test/integration/testdata/compose/reschedule.yml
@@ -9,6 +9,16 @@ service1:
 
 service2:
   image: busybox
+  ports:
+    - "80"
+  command: sleep 100
+  environment:
+    - reschedule:on-node-failure
+  labels:
+    com.docker.swarm.constraints: '["node==~node-0"]'
+
+service3:
+  image: busybox
   command: sleep 100
   labels:
     com.docker.swarm.constraints: '["node==~node-0"]'
