Adding ugorji/go/ package to vendor/
Signed-off-by: Nishant Totla <nishanttotla@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -2,11 +2,11 @@ github.com/Microsoft/go-winio c40bf24f405ab3cc8e1383542d474e813332de6d
 github.com/Sirupsen/logrus 3ec0642a7fb6488f65b06f9040adc67e3990296a
 github.com/urfave/cli c31a7975863e7810c92e2e288a9ab074f9a88f29
 
-# coreos/etcd depends on the dependencies listed below
-# their import version should be the same as that required
+# coreos/etcd depends on the dependencies listed below it.
+# Their import versions should be the same as that required
 # by the corresponding version of coreos/etcd
 github.com/coreos/etcd 6081a29c13c380f1e7d85240f7927e422b0cfa51
-# golang.org/x/net/context 7dbad50ab5b31073856416cdcfeb2796d682f844
+github.com/ugorji/go f1f1a805ed361a0e078bb537e4ea78cd37dcf065
 
 github.com/davecgh/go-spew 5215b55f46b2b919f50a1df0eaa5886afe4e3b3d
 github.com/docker/distribution ee8450ff13538d829a9a7909da9b979764d56865
