--- a/vendor.conf
+++ b/vendor.conf
@@ -8,6 +8,7 @@ github.com/Microsoft/go-winio v0.4.2
 github.com/Sirupsen/logrus 3ec0642a7fb6488f65b06f9040adc67e3990296a
 github.com/urfave/cli c31a7975863e7810c92e2e288a9ab074f9a88f29
 github.com/docker/swarmkit 97727e1e18c356435819020f02f586340a8ca812
+github.com/docker/go-events 37d35add5005832485c0225ec870121b78fcff1c
 github.com/davecgh/go-spew 5215b55f46b2b919f50a1df0eaa5886afe4e3b3d
 github.com/docker/distribution b38e5838b7b2f2ad48e06ec4b500011976080621
 github.com/docker/docker 5eca8382b03278dc42c228b3d14dec0909ce655b
