Updating vendoring github.com/gogo/protobuf v0.4
Signed-off-by: Nishant Totla <nishanttotla@gmail.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -19,7 +19,7 @@ github.com/docker/go-units 0bbddae09c5a5419a8c6dcdd7ff90da3d450393b
 github.com/docker/leadership bfc7753dd48af19513b29deec23c364bf0f274eb
 github.com/docker/libkv aabc039ad04deb721e234f99cd1b4aa28ac71a40
 github.com/docker/libtrust 9cbd2a1374f46905c68a4eb3694a130610adc62a
-github.com/gogo/protobuf 7b1331554dbe882cb3613ee8f1824a5583627963
+github.com/gogo/protobuf v0.4
 github.com/golang/glog fca8c8854093a154ff1eb580aae10276ad6b1b5f
 github.com/gorilla/context 1c83b3eabd45b6d76072b66b746c20815fb2872d
 github.com/gorilla/mux 26a6070f849969ba72b72256e9f14cf519751690
