--- a/test/integration/Dockerfile
+++ b/test/integration/Dockerfile
@@ -1,3 +1,5 @@
+ARG GO_VERSION=1.12.4
+
 # Dockerfile for swarm integration test environment.
 # Use with run_in_docker.sh
 
@@ -8,7 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends git file parall
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install golang
-ENV GO_VERSION 1.7.1
+ENV GO_VERSION=${GO_VERSION}
 RUN curl -sSL https://storage.googleapis.com/golang/go${GO_VERSION}.linux-amd64.tar.gz | tar -v -C /usr/local -xz
 ENV PATH /go/bin:/usr/local/go/bin:$PATH
 ENV GOPATH /go
